--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
 
+#worldTaunt {
+  font-family: Verdana;
+}
+      
+#Title {
+  font-family: Verdana;
+  font-style: italic;
+  font-size: 60px;
+}
+#intro {
+  font-family: Verdana;
+  font-style: italic;
+  font-size: 20px;
+}
+      
+      
