--- a/style.css
+++ b/style.css
@@ -13,5 +13,18 @@
   font-style: italic;
   font-size: 20px;
 }
+
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: red;
+}
       
       
