--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
   font-family: Verdana;
   font-style: italic;
   font-size: 20px;
+  border: 4px black;
+  outline-color: green;
 }
 
 #MusicLabel {
