--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
   font-family: Verdana;
 }
 
+#Aelon {
+  font-family: Verdana
+  font-style: italic;
+}
+
 a:link, a:visited {
     background-color: #f44336;
     color: white;
