--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    font-family: Verdana;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -46,6 +47,7 @@
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+    right: 0;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
