--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
+    font-family: Verdana;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
