--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    text-align: right;
 }
 
 /* Links inside the dropdown */
@@ -62,6 +63,7 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: right;
 }
 
 /* Change color of dropdown links on hover */
