--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
   text-align: center;
 }
 
+div#fixedheader {
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	color:#CCC;
+	background:#333;
+	padding:20px;
+}
+
 /* This is the paragraph */
 #intro {
   font-family: Verdana;
