--- a/profile/style.css
+++ b/profile/style.css
@@ -22,18 +22,22 @@ div#fixedheader {
 
 a:link {
     text-decoration: none;
+    color: white;
 }
 
 a:visited {
     text-decoration: none;
+    color: white;
 }
 
 a:hover {
     text-decoration: underline;
+    color: green;
 }
 
 a:active {
     text-decoration: underline;
+    color: blue;
 }
 
 #Paragraph {
