--- a/settings/style.css
+++ b/settings/style.css
@@ -26,7 +26,7 @@ div#fixedheader {
 }
 
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: red;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -49,7 +49,7 @@ div#fixedheader {
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     text-align: right;
-}\
+}
 
 /* Links inside the dropdown */
 .dropdown-content a {
